[tool.poetry]
name = "user-management-api"
version = "0.1.0"
description = "A simple API to manage users using FastAPI & SQLite"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.65.2"
aiosqlite = "^0.17.0"
uvicorn = "^0.13.4"
sqlalchemy = "^1.4.15"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
